--- a/userPermission.css
+++ b/userPermission.css
@@ -123,7 +123,7 @@ input{
 
     /* position: relative;
     height: 100%; */
-    height: 450px !important;
+    height: 390px !important;
     overflow-y: auto !important;
     white-space: nowrap !important;
 }
@@ -143,6 +143,10 @@ input{
 /* 4 button work start here */
 
 
-.col-1{
+/* .col-1{
     display: block !important;
+} */
+.userNameLists:hover{
+    background-color: rgb(36, 143, 231);
+    color: #fff;
 }
